1272. showcase of code gem: logic, not translate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
   "terminal.integrated.fontFamily": "Iosevka Term", // "MesloLGM Nerd Font"
   "terminal.integrated.fontSize": 12,
   "cSpell.words": [
+    "Leetcode",
     "Lookback",
     "popleft"
   ], // "MesloLGM Nerd Font"
