--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   //   "121"
   // ],
   "[python]": {
-    "editor.defaultFormatter": "ms-python.python",
+    "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
       "source.organizeImports": true
@@ -23,7 +23,7 @@
   //     "--max-line-length=100"
   // ],
   // "editor.parameterHints": true,
-  // "editor.hover.enabled": false,
+  "editor.hover.enabled": false,
   "vim.handleKeys": {
     "<C-c>": false,
     "<C-v>": false,
